<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MakeRersevationActivity">



    <EditText
        android:id="@+id/makeReservationpPurpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Purpose"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/fromTimeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fromTimePickButtonClicked"
            android:text="From Time" />

        <Button
            android:id="@+id/toTimeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="toTimePickButtonClicked"
            android:text="To Time" />


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meeting start"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/roomId"
        android:hint="Choose Room Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnAddReservation"
        android:text="Add Reservation" />

</LinearLayout>